# web

./: .clog.toml  .editorconfig  .gitignore  .golangci.yaml  .spectral.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.md  app.go  app_test.go  context.go  gen.go  go.mod  go.sum  handlers.go  handlers_test.go  mock_StartOption.go  options.go  options_helpers.go  options_test.go  vault.go
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci-code-approval.yml  codeql.yml
cache/: BUILD.bazel  fixed_hash_bucket.go  fixed_hash_bucket_test.go  hash_bucket.go  mock_HashBucket.go  service_endpoint_hash_bucket.go  service_endpoint_hash_bucket_test.go
cache/mock/: BUILD.bazel  mock.gen.go
database/: connection.go  database.go
health/: BUILD.bazel  check.go  check_options.go  check_test.go  checker.go  checker_options.go  checker_test.go  error.go  errors.go  mock_Checker.go  mock_CheckerOption.go  result.go  result_test.go  state.go  state_test.go  status.go  status_test.go  time.go
k8s/: BUILD.bazel  pod.go  resource.go  resource_test.go
logging/: BUILD.bazel  config.go  config_test.go  dedupe_handler.go  dedupe_handler_bench_test.go  keys.go  logger.go  logger_test.go  mock_Option.go  options.go  request.go
magefiles/: alias.go  bazel.go  build.go  dep.go  generate.go  init_and_config.go  log.go  test.go
metrics/: BUILD.bazel  metrics.go  metrics_test.go
slices/: BUILD.bazel  set.go  set_test.go
sync/: channel_broadcaster.go  channel_broadcaster_test.go  worker_pool.go  worker_pool_test.go
utils/: casting.go  commit.go  context.go  deps.go  kubernetes.go
utils/bazel/tools/mock/: BUILD.bazel  main.go  mock.bzl
vault/: auth.go  client.go  client_opts.go  lease.go  path_opts.go  secret.go  utils.go
vault/database/: connection.go
version/: BUILD.bazel  info.go
