bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "auto",
    directives = [
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "com_github_caarlos0_env_v10",
    "com_github_fsnotify_fsnotify",
    "com_github_gomodule_redigo",
    "com_github_gorilla_mux",
    "com_github_jacobbrewer1_goredis",
    "com_github_jacobbrewer1_uhttp",
    "com_github_jacobbrewer1_vaulty",
    "com_github_jacobbrewer1_workerpool",
    "com_github_magefile_mage",
    "com_github_nats_io_nats_go",
    "com_github_prometheus_client_golang",
    "com_github_serialx_hashring",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_vektra_mockery_v2",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_klog_v2",
    "org_uber_go_mock",
)
