load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logging",
    srcs = [
        "config.go",
        "dedupe_handler.go",
        "keys.go",
        "logger.go",
        "options.go",
        "request.go",
    ],
    importpath = "github.com/jacobbrewer1/web/logging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_caarlos0_env_v10//:env",
        "@com_github_jacobbrewer1_uhttp//:uhttp",
    ],
)

go_test(
    name = "logging_test",
    srcs = [
        "config_test.go",
        "dedupe_handler_test.go",
        "logger_test.go",
    ],
    embed = [":logging"],
    deps = ["@com_github_stretchr_testify//require"],
)
