load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//utils/bazel/tools/mock:mock.bzl", "mock")

mock(
    interfaces = [
        "HashBucket",
    ],
    library = "//cache",
)

go_library(
    name = "mock",
    srcs = ["mock.gen.go"],
    importpath = "github.com/jacobbrewer1/web/cache/mock",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_mock//gomock"],
)
