load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mock_lib",
    srcs = ["main.go"],
    importpath = "github.com/jacobbrewer1/web/utils/bazel/tools/mock",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_mock//mockgen/model"],
)

go_binary(
    name = "mock",
    embed = [":mock_lib"],
    visibility = ["//visibility:public"],
)
